<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#007888"

    tools:context=".onboard.screens.SecondFragment">

    <ImageView
        android:id="@+id/illustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:src="@drawable/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/message"
        android:textAppearance="@style/OnBoardingHeadlineTextAppearance"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/message_description"
        android:textAppearance="@style/AppTextAppearance"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintTop_toBottomOf="@id/illustration" />


    <TextView
        android:id="@+id/prev_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/prev"
        android:textAppearance="@style/AppTextAppearance"
        app:layout_constraintBottom_toBottomOf="@id/next_arrow"
        app:layout_constraintStart_toEndOf="@id/prev_arrow"
        app:layout_constraintTop_toTopOf="@id/next_arrow" />

    <ImageView
        android:id="@+id/prev_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/next"
        android:textAppearance="@style/AppTextAppearance"
        app:layout_constraintBottom_toBottomOf="@id/next_arrow"
        app:layout_constraintEnd_toStartOf="@id/next_arrow"
        app:layout_constraintTop_toTopOf="@id/next_arrow" />

    <ImageView
        android:id="@+id/next_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/arrow_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>